Updated comments on several examples